# bozomake

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  configure.in
DEBIAN/: changelog.Debian  config  control  control.in  copyright  postinst  postrm  preinst  templates
DEBIAN/DEBIAN/: control
man/: Makefile.am  autoall.1.in  bozoconf.1.in  brev.1.in  count.1.in  countsort.1.in  cptobackup.1.in  cvsstat.1.in  maketags.1.in  percent.1.in  repozclean.1.in  revtail.1.in  scramble.1.in  settitle.1.in  vimall.1.in
scripts/: Makefile.am  autoall.in  bozoconf.in  clean4cvs.in  configure.in  cptobackup.in  cvsstat.in  maketags.in  mvtobackup.in  repozclean.in  settitle.in  vimall.in
src/: Makefile.am  brev.c  count.c  countsort.c  percent.c  rev.c  revtail.c  scramble.c  validation-Makefile
